--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                     <fieldset class="ren3">
                         <legend class="ren3">
-                            <input class = "name ren3" type="text" value="C房房主焦子腾nb">
+                            <input class = "name ren3" type="text" value="C房房主jztnb">
                         </legend>
                         <div class="form-group">
                             $<input class="money ren3" type="number" value="0" required><br/>
